--- a/index.html
+++ b/index.html
@@ -1,1 +1,178 @@
-Dave Rovine Portfolio
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dave Rovine | AI Systems & Automation</title>
+  <meta name="description" content="AI systems, automation, agent design, and applied machine intelligence." />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <style>
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: radial-gradient(1200px 600px at 10% 10%, #111827, #020617);
+      color: #e5e7eb;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 80px 24px;
+    }
+    header {
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+    }
+    .badge {
+      display: inline-block;
+      padding: 6px 12px;
+      border-radius: 999px;
+      background: rgba(56,189,248,0.15);
+      color: #38bdf8;
+      font-size: 13px;
+      font-weight: 600;
+      letter-spacing: .02em;
+      width: fit-content;
+    }
+    h1 {
+      font-size: clamp(40px, 6vw, 72px);
+      font-weight: 800;
+      line-height: 1.05;
+      margin: 0;
+      letter-spacing: -0.02em;
+    }
+    h1 span {
+      background: linear-gradient(90deg, #38bdf8, #a78bfa);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .subtitle {
+      max-width: 720px;
+      font-size: 20px;
+      color: #cbd5f5;
+    }
+    .hero-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 40px;
+      margin-top: 40px;
+    }
+    .card {
+      background: rgba(255,255,255,0.03);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 18px;
+      padding: 32px;
+      backdrop-filter: blur(10px);
+    }
+    .card h3 {
+      margin-top: 0;
+      font-size: 22px;
+    }
+    .pill-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    .pill {
+      padding: 8px 14px;
+      border-radius: 999px;
+      background: rgba(99,102,241,0.15);
+      color: #c7d2fe;
+      font-size: 14px;
+      font-weight: 500;
+    }
+    .cta {
+      margin-top: 48px;
+      display: flex;
+      gap: 16px;
+      flex-wrap: wrap;
+    }
+    .btn {
+      padding: 14px 22px;
+      border-radius: 12px;
+      font-weight: 600;
+      text-decoration: none;
+      border: 1px solid rgba(255,255,255,0.12);
+      color: #e5e7eb;
+      background: rgba(255,255,255,0.04);
+    }
+    .btn.primary {
+      background: linear-gradient(90deg, #38bdf8, #6366f1);
+      color: #020617;
+      border: none;
+    }
+    footer {
+      margin-top: 120px;
+      font-size: 14px;
+      color: #9ca3af;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 16px;
+    }
+    @media (min-width: 900px) {
+      .hero-grid {
+        grid-template-columns: 1.2fr 1fr;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <span class="badge">AI Systems • Automation • Agents</span>
+      <h1>
+        Dave Rovine<br />
+        <span>Applied AI Architect</span>
+      </h1>
+      <p class="subtitle">
+        I design and deploy practical AI systems — automation pipelines, autonomous agents,
+        and intelligent interfaces that replace busywork and create leverage.
+      </p>
+    </header>
+
+    <section class="hero-grid">
+      <div class="card">
+        <h3>What I Actually Build</h3>
+        <p>
+          Not demos. Not hype. Real systems that run in production and save time or money.
+        </p>
+        <div class="pill-list">
+          <span class="pill">AI Agents & Orchestration</span>
+          <span class="pill">Automation Workflows</span>
+          <span class="pill">Chatbots & RAG Systems</span>
+          <span class="pill">API‑Driven Backends</span>
+          <span class="pill">Business Process AI</span>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Focus Areas</h3>
+        <p>
+          I specialize in applied AI — systems that integrate cleanly with real tools and
+          real constraints.
+        </p>
+        <div class="pill-list">
+          <span class="pill">LLMs & Prompt Engineering</span>
+          <span class="pill">Autonomous Workflows</span>
+          <span class="pill">Data‑Aware AI</span>
+          <span class="pill">Internal Tools</span>
+          <span class="pill">AI for SMBs</span>
+        </div>
+      </div>
+    </section>
+
+    <div class="cta">
+      <a class="btn primary" href="#">Projects (coming soon)</a>
+      <a class="btn" href="mailto:hello@davidrovine.com">Contact</a>
+    </div>
+
+    <footer>
+      <span>© 2025 Dave Rovine</span>
+      <span>Temporary landing — full site in progress</span>
+    </footer>
+  </div>
+</body>
+</html>
